# strata

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/stack-pipeline/: SKILL.md
src/app/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  pipeline.py  state.py  test.md
src/app/agents/: prompts.py  runner.py  validation.py
src/app/harness/: config.yaml
src/app/harness/agents/: 1-prompt.md  2-context.md  3-intent.md  4-judgment.md  5-coherence.md  eval.md
src/app/harness/docs/: HARNESS.md  eval-criteria.md
src/app/harness/schemas/: coherence_output.json  context_output.json  intent_output.json  judgment_output.json  prompt_output.json
src/app/qa/: boundary_check.py  drift.py  transcript.py  usage_tracker.py  validators.py
src/app/ui/: checkpoint.py  themes.py
tests/adversarial/: test_boundary_probes.py  test_complexity_classifier.py
tests/metamorphic/: test_model_upgrade_monotonic.py  test_setting_sources_isolation.py  test_skip_equivalence.py
tests/unit/: test_auto_gate_skip.py  test_cascade_reset.py  test_drift.py  test_pipeline_parse.py  test_prompts.py  test_schema_contracts.py  test_session_validation.py  test_state_immutability.py  test_transcript.py  test_usage_tracker.py  test_validators.py
